--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-cli": "^1.2.0"
   },
   "dependencies": {
-    "grunt-cli": "^1.2.0"
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-rename": "0.0.3"
   }
 }
